Trio-Challenge: - Add Integration Clients and Services. - Creates Adapters, Models, Services and Clients for Mock Service and MailChimp Service